Blog page added and some metadata changes.

--- a/_posts/2008-09-09-275.markdown
+++ b/_posts/2008-09-09-275.markdown
@@ -7,8 +7,9 @@ slug: '275'
 title: Peter Sanders
 wordpress_id: 275
 categories:
-- Articles
+- Work
 tags:
+- Writing
 - Photography
 - The National
 ---
