--- a/_posts/2012-01-26-luddites.markdown
+++ b/_posts/2012-01-26-luddites.markdown
@@ -7,8 +7,9 @@ slug: luddites
 title: Technology's wreckers and breakers
 wordpress_id: 535
 categories:
-- Articles
+- Work
 tags:
+- Writing
 - History
 - Technology
 - The Kernel
