--- a/_posts/2008-11-05-282.markdown
+++ b/_posts/2008-11-05-282.markdown
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2008-11-05 20:00:59
 layout: post
-slug: 'mirror-neurons'
+slug: '282'
 title: Mirror neurons
 wordpress_id: 282
 categories:
@@ -14,7 +14,9 @@ tags:
 - The National
 ---
 
-<h2 class="subtitle>Watching someone perform a task triggers the same neurons that are activated when the observer performs the task. These mirror neurons have implications that reach into all realms of social activity.</h2>
+Watching someone perform a task triggers the same neurons that are activated when the observer performs the task. These mirror neurons have implications that reach into all realms of social activity. Published in [The National ](http://www.thenational.ae/news/uae-news/science/mirror-mirror-in-the-brain?pageCount=0)on 5 November 2008.
+
+
 
 In the mid-1990s, researchers at the University of Parma in Italy were investigating motor neuron activity in the brains of macaque monkeys. They placed electrodes on the premotor cortex, a region of the brain which controls movement. Then they recorded activity in the brain when the monkey grabbed a peanut, noting how its neurons reacted when it carried out this particular action. During the experiment, the researchers, led by Prof Giacomo Rizzolatti and Prof Vittorio Gallese, noticed something surprising. Some of the neurons they were monitoring responded not only when the monkey performed a certain action, but also when the monkey watched that action being performed. So, for example, the same neurons that responded when the monkey grasped a peanut, also responded when the monkey watched one of the researchers grasp a peanut.
 
@@ -39,5 +41,3 @@ Whatever their name and however these neurons function, the research underway ha
 However, science has yet to reach this complex level of understanding about how mirror neuron systems work. "We are still working on very basic questions," says Dr Immordino-Yang. "For example, people who are subjectively more empathetic, more in tune with the people around them, do they have more mirror-neuron activity compared with people who aren't when they are just watching a certain action, such as somebody lifting a tea cup?"
 
 One thing is certain, unravelling how mirror neuron systems work and their connections with other parts of the brain is a key to understanding the relationship between what we see and what we do.
-
-Published in [The National ](http://www.thenational.ae/news/uae-news/science/mirror-mirror-in-the-brain?pageCount=0)on 5 November 2008.
