Changed lost of article titles.

--- a/_posts/2010-09-09-opec-at-50.markdown
+++ b/_posts/2010-09-09-opec-at-50.markdown
@@ -4,7 +4,7 @@ comments: false
 date: 2010-09-09 12:08:15
 layout: post
 slug: opec-at-50
-title: Opec at 50
+title: Opec at 50 - The National
 wordpress_id: 68
 categories:
 - Work
@@ -14,7 +14,4 @@ tags:
 
 I created a map and a timeline for Opec's 50 anniversary for [The National](http://www.thenational.ae/business/energy/opec-at-50)'s business section.
 
-
-
-
-[![](http://www.robertocarroll.com/wp-content/uploads/2010/09/opec_50-580.jpg)](http://www.robertocarroll.com/2010/09/09/opec-at-50/opec_50-580/)
+<img src="http://farm8.staticflickr.com/7416/9141427549_e4717929ab_z.jpg" width="100%" height="auto" alt="Opec at 50 timeline">
