--- a/_posts/2012-04-13-art-dubai.markdown
+++ b/_posts/2012-04-13-art-dubai.markdown
@@ -16,6 +16,6 @@ tags:
 
 I worked with [Art Dubai](http://www.artdubai.ae/) developing [their blog](http://www.artdubai.ae/blog/) and sites for [Art Week ](http://artweek.ae/)(now offline) and [Design Days Dubai ](http://www.designdaysdubai.ae/blogs/). 
 
-[![Art Dubai blog](http://www.robertocarroll.com/wp-content/uploads/2012/04/art-dubai-blog.jpg)](http://www.robertocarroll.com/wp-content/uploads/2012/04/art-dubai-blog.jpg)
+<img src="http://farm4.staticflickr.com/3763/9144923034_1eed3fabe3_z.jpg" width="100%" height="auto" alt="Art Dubai">
 
 I helped to integrate Google Maps to display each gallery and each region, as well as develop the information architecture and ways to filter by tags within categories.    
