Changed text in article.

--- a/_posts/2009-06-01-wire.markdown
+++ b/_posts/2009-06-01-wire.markdown
@@ -11,6 +11,4 @@ tags:
 - Writing
 ---
 
-I wrote an article about Sana'a in Yemen for [The Wire](http://www.thewire.co.uk). 
-
-<img src="http://farm4.staticflickr.com/3728/9150463451_27734d7d47_z.jpg" width="100%" height="auto" alt="Wire Sanaa">
+test
