--- a/_posts/2013-03-10-wire.markdown
+++ b/_posts/2013-03-10-wire.markdown
@@ -4,7 +4,7 @@ comments: false
 date: 2013-03-10 09:35:48
 layout: post
 slug: barjeel-art-foundation
-title: Barjeel Art Foundation
+title: Global Ear: Sana'a - The Wire
 categories:
 - Work
 tags:
