Added a couple of weeknotes.§

--- a/_posts/2013-11-24-week-81.md
+++ b/_posts/2013-11-24-week-81.md
@@ -17,4 +17,4 @@ I've been trying - and failing - to do weeknotes for while now. This post origin
 
 This week was all about the alpha build of _Abaris_, a big digital project I have been working on since September. The design and content work of the first sprint is starting to take shape on-screen and there's plenty of groundwork laid for the next couple of sprints. All in all, it's starting to shape up nicely. 
 
-I also wrapped up a couple of design changes to a map project which will launching soon and I had a promising email about the glimmer of a new digital project in the Middle East.    
+I also wrapped up a couple of design changes to a map project which will be launching soon and I had a promising email about the glimmer of a new digital project in the Middle East.    
