Added another blog post (old one).

--- a/_posts/2013-12-31-2014.md
+++ b/_posts/2013-12-31-2014.md
@@ -11,12 +11,12 @@ tags:
 - weeknotes
 ---
 
-Noting down a few things to focus on in the coming year. 
+Here's a few things to focus on in the coming year. 
 
 * Writing more articles and essays 
 * Doing Code Club
 * Doing a text analysis project in Python 
-* Exploring Denmark and Copenhagen in the campervan 
+* Exploring Denmark, Sweden and Norway in the campervan 
 * Learning JavaScript (properly)
 * Reading
 * More music - listening and playing
