Adding flickr plugin and testing.

--- a/_posts/2014-03-18-agility.md
+++ b/_posts/2014-03-18-agility.md
@@ -11,9 +11,7 @@ tags:
 - development
 ---
 
-Here is how to do something in an agile fashion:
-
-What to do:
+## What to do:
 
 * Find out where you are
 * Take a small step towards your goal
@@ -21,8 +19,8 @@ What to do:
         
 * Repeat
 
-How to do it:
+## How to do it:
 
 When faced with two of more alternatives that deliver roughly the same value, take the path that makes future change easier.
 
-From [Agile Is Dead (Long Live Agility)](http://pragdave.me/blog/2014/03/04/time-to-kill-agile/) via [http://russelldavies.typepad.com](http://russelldavies.typepad.com/planning/2014/03/what-to-do.html)
+From [Agile Is Dead (Long Live Agility)](http://pragdave.me/blog/2014/03/04/time-to-kill-agile/) via [Russell Davies](http://russelldavies.typepad.com/planning/2014/03/what-to-do.html)
