Added flickr plugin

--- a/_posts/2013-12-31-2014.md
+++ b/_posts/2013-12-31-2014.md
@@ -11,6 +11,8 @@ tags:
 - weeknotes
 ---
 
+{% flickr_image 12053872274 b %}
+
 Here's a few things to focus on in the coming year. 
 
 * Writing more articles and essays 
