--- a/_posts/2014-03-18-agility.md
+++ b/_posts/2014-03-18-agility.md
@@ -25,4 +25,4 @@ How to do it:
 
 When faced with two of more alternatives that deliver roughly the same value, take the path that makes future change easier.
 
-From [Agile Is Dead (Long Live Agility)](http://pragdave.me/blog/2014/03/04/time-to-kill-agile/) via [http://russelldavies.typepad.com](http://russelldavies.typepad.com/planning/2014/03/what-to-do.html)
+From [Agile Is Dead (Long Live Agility)](http://pragdave.me/blog/2014/03/04/time-to-kill-agile/) via [Russell Davies](http://russelldavies.typepad.com/planning/2014/03/what-to-do.html)
