Fixed up the recently template.

--- a/_posts/journal/2014-06-21-recently-june-2014.md
+++ b/_posts/journal/2014-06-21-recently-june-2014.md
@@ -5,13 +5,14 @@ date: 2014-06-21 16:34:33
 layout: recently
 slug: recently
 title: 'Recently - June 2014'
-top_image: 
+top_image: 2014-06-recently-black-hill.jpg
+top_image_caption: 'Trekking up Black Hill'
 categories:
 - Journal
 tags:
 - recently
 ---
 
-
+test
 
  
