Updates to recently posts.

--- a/_posts/journal/2013-12-31-looking-back-2013.md
+++ b/_posts/journal/2013-12-31-looking-back-2013.md
@@ -13,7 +13,7 @@ tags:
 
 what happened in 2013?
 
-Here's a few things to focus on in the coming year. 
+## Here's a few things to focus on in the coming year. 
 
 * Writing more articles and essays 
 * Doing Code Club
