Lots of text edits.

--- a/_posts/journal/2014-12-31-looking-back-2014.md
+++ b/_posts/journal/2014-12-31-looking-back-2014.md
@@ -19,7 +19,7 @@ what happened in 2014?
 
 * Get work into the world - improve the ratio of ideas to things made
 * Travel to at least three new countries
-* Reading the Shakespeare's plays in chronological order
+* Reading Shakespeare's plays in chronological order
 * Focus - Hone existing skills rather than learn new ones
 * Publish at least five articles and a short story
 * More writing - actual get those ideas going that I've been mulling over for so long
