Fixed up the filter. Working OK but a few things to sort out.

--- a/_posts/work/2013-10-24-ippf-map.markdown
+++ b/_posts/work/2013-10-24-ippf-map.markdown
@@ -9,7 +9,7 @@ categories:
 - Work
 services:
 - Concept and strategy
-- Design
+- Experience design
 - Digital development
 - Data and maps
 excerpt: Exploring the IPPF’s work around the world
