Added June 2015 month note and other bits and pieces.

--- a/_posts/journal/2013-12-31-looking-back-2013.md
+++ b/_posts/journal/2013-12-31-looking-back-2013.md
@@ -11,7 +11,7 @@ tags:
 - yearnotes
 ---
 
-what happened in 2013?
+what happened in 2013? I'll get around to writing this at some point.
 
 ## Here's a few things to focus on in the coming year. 
 
