--- a/_posts/journal/2014-12-31-looking-back-2014.md
+++ b/_posts/journal/2014-12-31-looking-back-2014.md
@@ -12,8 +12,7 @@ categories:
 tags:
 - yearnotes
 ---
-
-what happened in 2014?
+What happened in 2014? - I'll get around to writing this at some point.
 
 ## Here's a few things to focus on in the coming year. 
 
