Added a writing template and fixed up the writing articles.

--- a/_posts/work/2013-07-26-aga-khan.markdown
+++ b/_posts/work/2013-07-26-aga-khan.markdown
@@ -15,6 +15,6 @@ services:
 excerpt: Research and strategy for a new website
 ---
 
-High-level strategy for the new website for the Aga Khan Museum. Included user research, principles and suggested approaches for the project.  
+Research and strategy work for the new website for the Aga Khan Museum. Included user research, principles and suggested approaches for the project.
 
 
