--- a/_posts/writing/2008-03-10-profile.markdown
+++ b/_posts/writing/2008-03-10-profile.markdown
@@ -2,7 +2,7 @@
 author: roberto
 comments: false
 date: 2008-03-01 09:35:48
-layout: work
+layout: writing
 slug: profile-feature
 title: Translatio imperii – Profile
 categories:
