--- a/_posts/writing/2012-01-26-luddites.markdown
+++ b/_posts/writing/2012-01-26-luddites.markdown
@@ -2,7 +2,7 @@
 author: roberto
 comments: false
 date: 2012-01-26 15:00:13
-layout: work
+layout: writing
 slug: luddites
 title: Technology's wreckers and breakers  – The Kernel
 categories:
