Fixing up Jekyll 3 stuff. Breadcrumb still broken.

--- a/journal/_posts/2014-12-31-looking-back-2014.md
+++ b/journal/_posts/2014-12-31-looking-back-2014.md
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2015-01-01 16:34:33
 layout: post
-slug: 2014
+slug: 2014-year
 title: 'Looking back at 2014'
 top_image: 2014-looking-back.jpg
 top_image_caption: 'Thing 1 and Thing 2 and a rabbit'
@@ -14,7 +14,7 @@ tags:
 ---
 What happened in 2014? - I'll get around to writing this at some point.
 
-## Here's a few things to focus on in the coming year. 
+## Here's a few things to focus on in the coming year.
 
 * Get work into the world - improve the ratio of ideas to things made
 * Travel to at least three new countries
