--- a/journal/_posts/2013-12-31-looking-back-2013.md
+++ b/journal/_posts/2013-12-31-looking-back-2013.md
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2014-01-01 16:34:33
 layout: post
-slug: 2013
+slug: 2013-year
 title: 'Looking back at 2013'
 categories:
 - Journal
@@ -13,14 +13,14 @@ tags:
 
 what happened in 2013? I'll get around to writing this at some point.
 
-## Here's a few things to focus on in the coming year. 
+## Here's a few things to focus on in the coming year.
 
-* Writing more articles and essays 
+* Writing more articles and essays
 * Doing Code Club
-* Doing a text analysis project in Python 
-* Exploring Denmark, Sweden and Norway in the campervan 
+* Doing a text analysis project in Python
+* Exploring Denmark, Sweden and Norway in the campervan
 * Learning JavaScript (properly)
 * Read a book instead (less screens)
 * More music - listening and playing
-* Doing more fun stuff with Thing 1 and Thing 2 
+* Doing more fun stuff with Thing 1 and Thing 2
 
