--- a/work/_posts/2017-04-09-amnesty-dp-2.markdown
+++ b/work/_posts/2017-04-09-amnesty-dp-2.markdown
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2017-04-09 09:35:48
 layout: work
-slug: taqa
+slug: amnesty-2016
 title: Amnesty Death Penalty Maps (2014-16)
 categories:
 - Work
@@ -16,9 +16,11 @@ services:
 excerpt: Visualising data from 2007-2016 on a timeline and map using D3
 ---
 
-Amnesty International publish figures on death penalties and executions around the world every year. In 2015, I began a project to visualise this data on a map and a timeline using D3. I worked with the internal design and content teams along with another developer at We Are Thought Fox to create a responsive application. Users can play through the timeline or search for a country or both. Languages are handled via a dictionary file to avoid duplication of data and everything is hosted and edited via Github.
+Amnesty International publish figures on death penalties and executions around the world every year. In 2015, I began a project to visualise this data on a map and a timeline using D3. I worked with the internal design and content teams along with another developer at We Are Thought Fox to create a responsive application. Users can play through the timeline or search for a country or both. Languages are handled via a dictionary file to avoid duplication of data and everything is hosted and edited via Github. The application is embedded using a responsive iFrame.
 
 [Try the application](https://www.amnesty.org/en/what-we-do/death-penalty/)
+
+[Take a look at the code](https://github.com/wearethoughtfox/amnesty-dp-2016/)
 
 ![Image showing the Amnesty Death Penalty Maps on a desktop](/images/amnesty-map-desktop.jpg)
 
