--- a/work/_posts/2017-04-09-amnesty-dp-2.markdown
+++ b/work/_posts/2017-04-09-amnesty-dp-2.markdown
@@ -4,7 +4,7 @@ comments: false
 date: 2017-04-09 09:35:48
 layout: work
 slug: amnesty-2016
-title: Amnesty Death Penalty Maps (2014-16)
+title: Amnesty Death Penalty Maps
 categories:
 - Work
 tags:
