--- a/journal/_posts/2014-05-21-recently-may-2014.md
+++ b/journal/_posts/2014-05-21-recently-may-2014.md
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2014-05-21 16:34:33
 layout: recently
-slug: recently
+slug: recently-05-2014
 title: 'Recently - May 2014'
 top_image: 2014-05-recently-kraftwerk.jpg
 top_image_caption: 'A mobile soundsystem powered by cycling and the sun'
@@ -13,4 +13,4 @@ tags:
 - recently
 ---
 
- 
+
