--- a/journal/_posts/2014-06-21-recently-june-2014.md
+++ b/journal/_posts/2014-06-21-recently-june-2014.md
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2014-06-21 16:34:33
 layout: recently
-slug: recently
+slug: recently-06-2014
 title: 'Recently - June 2014'
 top_image: 2014-06-recently-black-hill.jpg
 top_image_caption: 'Trekking up Black Hill'
@@ -13,4 +13,4 @@ tags:
 - recently
 ---
 
- 
+
