--- a/journal/_posts/2014-07-21-recently-july-2014.md
+++ b/journal/_posts/2014-07-21-recently-july-2014.md
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2014-07-21 16:34:33
 layout: recently
-slug: recently
+slug: recently-07-2014
 title: 'Recently - July 2014'
 top_image: 2014-07-recently-tour-de-france.jpg
 top_image_caption: 'Riders in the Tour de France scaling Holme Moss'
