--- a/journal/_posts/2015-05-31-recently-may-2015.md
+++ b/journal/_posts/2015-05-31-recently-may-2015.md
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2015-05-31 16:34:33
 layout: recently
-slug: recently
+slug: recently-05-2015
 title: 'Recently - May 2015'
 top_image: 2015-05-recently.jpg
 top_image_caption: 'A mooring in Twickenham'
@@ -15,4 +15,4 @@ tags:
 
 Grayson Perry’s Dream House was an odd program. He's usually so in control of his material and its effects but here it was more open. Not quite gripping, but certainly interesting, particularly the tensions between art, subject, artist and audience. Lovely to see art and architecture [mixing in delightful ways](http://www.living-architecture.co.uk/the-houses/a-house-for-essex/overview/) like Fondation Maeght on acid.
 
- 
+
