--- a/journal/_posts/2015-06-30-recently-june-2015.md
+++ b/journal/_posts/2015-06-30-recently-june-2015.md
@@ -3,7 +3,7 @@ author: roberto
 comments: false
 date: 2015-06-30 16:34:33
 layout: recently
-slug: recently
+slug: recently-06-2015
 title: 'Recently - June 2015'
 top_image: 2015-06-recently.jpg
 top_image_caption: 'Gaddings Dam'
@@ -15,4 +15,4 @@ tags:
 
 
 
- 
+
