--- a/work/_posts/2014-12-18-icc-map.markdown
+++ b/work/_posts/2014-12-18-icc-map.markdown
@@ -13,7 +13,7 @@ tags:
 services:
 - Concept and strategy
 - Digital development
-excerpt: Developing a world map for the ICC using D3
+excerpt: Developing a world map using D3
 ---
 
 [We Are Thought Fox](http://wearethoughtfox.com) came up with the idea for an app to encourage users to make connections within the art collection at Barjeel Art Foundation in the UAE. We designed and developed this app using Backbone and Phonegap. I was sole developer on the project.
