--- a/_work/2013-11-06-rec.markdown
+++ b/_work/2013-11-06-rec.markdown
@@ -4,7 +4,7 @@ comments: false
 date: 2013-11-06 09:35:48
 layout: work
 slug: recruitment-and-employment-confederation
-title: REC
+title: New website - REC
 categories:
 - Work
 tags:
@@ -17,6 +17,6 @@ services:
 excerpt: Content strategy for two website relaunches
 ---
 
-The Recruitment and Employment Confederation began a complete redesign of their existing sites. I led the content strategy for this project. I conducted user research and content audits, helping to cull poor and outdated content. I also developed content templates and a style and tone guide.  
+The Recruitment and Employment Confederation began a complete redesign of their existing sites. I led the content strategy for this project. I conducted user research and content audits, helping to cull poor and outdated content. I also developed content templates and a style and tone guide.
 
 
