--- a/_work/2014-12-18-icc-map.markdown
+++ b/_work/2014-12-18-icc-map.markdown
@@ -4,7 +4,7 @@ comments: false
 date: 2014-12-18 09:35:48
 layout: work
 slug: icc-map
-title: ICC map
+title: ICC map - International Criminal Court
 categories:
 - Work
 tags:
