Cleaned up journal

--- a/_journal/2013-12-31-looking-back-2013.md
+++ b/_journal/2013-12-31-looking-back-2013.md
@@ -10,11 +10,11 @@ categories:
 tags:
 - yearnotes
 ---
-
-what happened in 2013? I'll get around to writing this at some point.
+<div class="message i">
+What happened in 2013? Maybe I'll get around to writing this at some point.
+</div>
 
 ## Here's a few things to focus on in the coming year.
-
 * Writing more articles and essays
 * Doing Code Club
 * Doing a text analysis project in Python
