--- a/_journal/2014-12-31-looking-back-2014.md
+++ b/_journal/2014-12-31-looking-back-2014.md
@@ -12,14 +12,15 @@ categories:
 tags:
 - yearnotes
 ---
+<div class="message i">
 What happened in 2014? - I'll get around to writing this at some point.
+</div>
 
 ## Here's a few things to focus on in the coming year.
-
 * Get work into the world - improve the ratio of ideas to things made
 * Travel to at least three new countries
 * Reading Shakespeare's plays in chronological order
 * Focus - Hone existing skills rather than learn new ones
 * Publish at least five articles and a short story
-* More writing - actual get those ideas going that I've been mulling over for so long
+* More writing - actually get those ideas going that I've been mulling over for so long
 
