--- a/_journal/2015-03-30-mccullan.md
+++ b/_journal/2015-03-30-mccullan.md
@@ -13,6 +13,8 @@ tags:
 excerpt: My notes from the film "Mccullan"
 ---
 
+<div class="message">Here’s my notes from the film “Mccullan”</div>
+
 It’s much better to be on the side of humanity. You have a moral duty - you want to take the picture and you want to stop it. People ask me, do you have nightmares? I say no, only when I’m awake. Even my darkroom is a haunted place. The red light, it’s as if I’m drowning in a deep ocean.
 
 Integrity, accuracy, don’t recreate something that wasn’t real.
