Fixed up writing

--- a/_writing/2008-03-10-profile.markdown
+++ b/_writing/2008-03-10-profile.markdown
@@ -15,7 +15,7 @@ excerpt: On the medieval theory of the movement of empire
 
 I wrote an article about *translatio imperii*, a medieval theory of the movement of empire, for Profile magazine.
 
-<img src="http://farm8.staticflickr.com/7285/9150166737_82536b67ab_z.jpg" width="100%" height="auto" alt="Profile">
+<img src="{{site.baseurl}}/images/writing-profile.jpg" width="100%" height="auto" alt="Profile">
 
 <span class="firstcharacter">W</span>here do you think of when you think of the West? 'Hardly one of life's imponderables, I know. But chances are, you plumped for the United States. Unless of course you are myopic, parochial, border-bound to the shores and cliffs of our tiny island. In which case, you probably picked Slough. Admit it. When it comes to the West, America's pretty much bagged the worldwide rights, notched up the copyright, trademarked the name. "Go West, young man, go West". There's the Wild West, the Western, Mae West.
 
