Fix broken links

--- a/_work/2015-03-01-icc-beta.markdown
+++ b/_work/2015-03-01-icc-beta.markdown
@@ -22,9 +22,9 @@ excerpt: Relaunching the website for an international organisation
 Following on from the work in the [ICC alpha](/work/icc-alpha/), I led the team designing and developing ICC Beta. It involved:
 
 - Interpretting and building upon the alpha feedback
-- Putting together a plan and outlining [the shape of the beta](http://robertocarroll.com/icc-beta/)
-- Designing the [content templates](http://robertocarroll.com/icc-beta/style-guide/content-templates.html) and [style guide](http://robertocarroll.com/icc-beta/style-guide/) to help people in the organisation create content.
-- Developing custom sections such as [maps](/work/icc-map/), [timelines](http://robertocarroll.com/icc-beta/timeline/lubanga) and other ideas such as customising content based on location.
+- Putting together a plan and outlining [the shape of the beta](https://robertocarroll.github.io/icc-beta/)
+- Designing the [content templates](https://robertocarroll.github.io/icc-beta/style-guide/content-templates.html) and [style guide](https://robertocarroll.github.io/icc-beta/style-guide/) to help people in the organisation create content.
+- Developing custom sections such as [maps](/work/icc-map/), [timelines](https://robertocarroll.github.io/icc-beta/timeline/lubanga) and other ideas such as customising content based on location.
 - User testing and regular feedback.
 - Lots more ... such as finding ways to [put the core texts back at the heart of the site](/journal/rome-statute-icc/)
 
