--- a/_work/2012-04-13-art-dubai.markdown
+++ b/_work/2012-04-13-art-dubai.markdown
@@ -15,11 +15,11 @@ services:
 - Concept and strategy
 - Experience design
 - Digital development
-excerpt: Creating new blogs for Middle East art fair 
+excerpt: Creating new blogs for Middle East art fair
 ---
 
-I worked with [Art Dubai](http://www.artdubai.ae/) developing [their blog](http://www.artdubai.ae/blog/) and sites for [Art Week ](http://artweek.ae/) (now offline) and [Design Days Dubai ](http://www.designdaysdubai.ae/blogs/). 
+I worked with [Art Dubai](http://www.artdubai.ae/) developing [their blog](http://www.artdubai.ae/blog/) and sites for [Art Week ](http://artweek.ae/) (now offline) and [Design Days Dubai ](http://www.designdaysdubai.ae/blogs/).
 
-<img src="http://farm4.staticflickr.com/3763/9144923034_1eed3fabe3_z.jpg" width="100%" height="auto" alt="Art Dubai">
+![Screenshot of the Art Dubai blog](/images/work-art-dubai-blog.jpg)
 
-I helped to integrate Google Maps to display each gallery and each region, as well as develop the information architecture and ways to filter by tags within categories.    
+I helped to integrate Google Maps to display each gallery and each region, as well as develop the information architecture and ways to filter by tags within categories.
