--- a/_work/2013-03-10-barjeel.markdown
+++ b/_work/2013-03-10-barjeel.markdown
@@ -11,15 +11,16 @@ services:
 - Concept and strategy
 - Experience design
 - Digital development
-excerpt: Creating a new identity and website for art foundation 
+excerpt: Creating a new identity and website for art foundation
 ---
 
-[Barjeel Art Foundation](http://www.barjeelartfoundation.org) was the first big project for [We Are Thought Fox](http://wearethoughtfox.com).   
+[Barjeel Art Foundation](http://www.barjeelartfoundation.org) was the first big project for [We Are Thought Fox](http://wearethoughtfox.com).
 
-We created a new identity for the foundation in digital and print. Clint has [written about this process on Barjeel's website](http://www.barjeelartfoundation.org/news/barjeel-rebranded). 
+We created a new identity for the foundation in digital and print. Clint has [written about this process on Barjeel's website](http://www.barjeelartfoundation.org/news/barjeel-rebranded).
 
 I was responsible for creating the information architecture, which highlighted the relationships between artists, countries and exhibitions and encouraged people to explore the collection.
 
 I built the WordPress theme using standards-driven CSS, HTML and JavaScript and responsive design to create a great experience on any device.
 
-<img src="http://farm4.staticflickr.com/3770/9146539016_3b9382d3f6_z.jpg" width="100%" height="auto" alt="Barjeel">
+![Screenshot of the Barjeel Art Foundation website](/images/work-barjeel.jpg)
+
