--- a/_scrapbook/2018-09-11-ux.md
+++ b/_scrapbook/2018-09-11-ux.md
@@ -5,4 +5,4 @@ layout: quote
 ---
 > Our lives are a string of experiences with people and with things. The quality of those experiences determine the quality of our lives.
 
-\-- [Aral Balkan](https://twitter.com/aral/status/194359821305253888)
+-- [Aral Balkan](https://twitter.com/aral/status/194359821305253888)
