--- a/_writing/2012-01-26-luddites.markdown
+++ b/_writing/2012-01-26-luddites.markdown
@@ -4,7 +4,8 @@ comments: false
 date: 2012-01-26 15:00:13
 layout: writing
 slug: luddites
-title: Technology's wreckers and breakers  – The Kernel
+title: Technology's wreckers and breakers
+publication: The Kernel
 categories:
 - Writing
 tags:
